log
Sat 09 Sep 2023 02:12:48 AM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
0716d11
Sat 09 Sep 2023 05:56:10 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:62:8: error: ‘*map.buckets’ may be used uninitialized [-Werror=maybe-uninitialized]
   62 |     map->buckets[i]=NULL;
      |     ~~~^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
df15b5a
Sat 09 Sep 2023 06:03:08 PM UTC: 
 hashmap.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|6
total_score: 0/70
b710ded
Sat 09 Sep 2023 06:35:27 PM UTC: 
 hashmap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
45271c7
Sat 09 Sep 2023 06:38:02 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  0|6
total_score: 0/70
f1e0feb
Sat 09 Sep 2023 06:40:48 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
11286ed
Sat 09 Sep 2023 07:04:51 PM UTC: 
 hashmap.c | 12 ++++++++++++
 1 file changed, 12 insertions(+)
 tests:  1|5
total_score: 10/70
6412a1a
Sat 09 Sep 2023 07:07:51 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:52:16: error: ‘keys’ undeclared (first use in this function); did you mean ‘key’?
   52 |     nuevo->key=keys;
      |                ^~~~
      |                key
hashmap.c:52:16: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9d628f5
Sat 09 Sep 2023 07:08:32 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
650faff
Sat 09 Sep 2023 07:09:53 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 20/70
3254c32
Sat 09 Sep 2023 07:11:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
e81ce9b
Sat 09 Sep 2023 07:23:55 PM UTC: 
 hashmap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:63:9: error: unused variable ‘newPosition’ [-Werror=unused-variable]
   63 |     int newPosition =resolverCollision(map, position);
      |         ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
23f2952
Sat 09 Sep 2023 07:29:12 PM UTC: 
 hashmap.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
9e04846
Sat 09 Sep 2023 08:30:11 PM UTC: 
 hashmap.c | 15 +++++++++++++--
 1 file changed, 13 insertions(+), 2 deletions(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:123:1: error: control reaches end of non-void function [-Werror=return-type]
  123 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
5d03b96
Sat 09 Sep 2023 08:30:49 PM UTC: 
 hashmap.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
b868b52
Sat 09 Sep 2023 08:32:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
5224821
Sat 09 Sep 2023 08:43:49 PM UTC: 
 hashmap.c | 14 +++++++++++++-
 1 file changed, 13 insertions(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘eraseMap’:
hashmap.c:107:14: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘bucket’; did you mean ‘buckets’?
  107 |     if (map->bucket[position]->key !=NULL && strcmp(map->buckets[position]->key, key)==0){
      |              ^~~~~~
      |              buckets
Compilation failed
6659020
Sat 09 Sep 2023 08:44:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
7df8ea8
Sat 09 Sep 2023 08:54:27 PM UTC: 
 hashmap.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:143:12: error: ‘HashMap’ {aka ‘struct HashMap’} has no member named ‘curret’; did you mean ‘current’?
  143 |   if (map->curret < map->capacity){
      |            ^~~~~~
      |            current
Compilation failed
f79ee9a
Sat 09 Sep 2023 08:54:53 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  13|2
total_score: 50/70
22b377b
